force-app/main/default/objects/LLC_BI__Product_State_Config_Pivot__c/LLC_BI__Product_State_Config_Pivot__c.object-meta.xml
<CustomObject>
    <description>This is a system-managed object and is populated via a trigger on the Product_State_Config__c object.</description>
    <label>Product State Config Pivot</label>
    <nameField>
        <displayFormat>P-{0000000000}</displayFormat>
        <label>Product State Config Pivot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product State Config Pivot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>