force-app/main/default/objects/LLC_BI__Product_State_Config_Pivot__c/fields/LLC_BI__Value_2__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Value_2__c</fullName>
    <description>This field is populated automatically via trigger whenever a product state config record is configured, and that record is the second to have &quot;LLC_BI__Is_Booked__c&quot;, &quot;LLC_BI__Is_Closed__c&quot;, &quot;LLC_BI__Is_Excluded_From_Stage_Duration__c&quot;, or &quot;LLC_BI__Is_Ready_To_Transmit__c&quot; enabled for its parent product type. This field stores the stage and status values which make up the state of true for one of the aforementioned checkboxes.</description>
    <label>Value 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>