force-app/main/default/objects/LLC_BI__Product_State_Config_Pivot__c/listViews/LLC_BI__All.listView-meta.xml
<ListView>
    <fullName>LLC_BI__All</fullName>
    <columns>NAME</columns>
    <columns>LLC_BI__Value_1__c</columns>
    <columns>LLC_BI__Value_2__c</columns>
    <columns>LLC_BI__Value_3__c</columns>
    <columns>LLC_BI__Value_4__c</columns>
    <columns>LLC_BI__Value_5__c</columns>
    <columns>LLC_BI__Value_6__c</columns>
    <columns>LLC_BI__Value_7__c</columns>
    <columns>LLC_BI__Value_8__c</columns>
    <columns>LLC_BI__Value_9__c</columns>
    <columns>LLC_BI__Value_10__c</columns>
    <columns>LLC_BI__lookupKey__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>